objects/WinLoss__c.object
<CustomObject>
    <description>削除対象OBject</description>
    <fields>
        <fullName>Field10__c</fullName>
        <label>顧客正式名称1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>顧客使用部署</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>顧客担当者名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>外部ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>勝敗因理由名称1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>勝敗因理由名称2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <label>勝敗因理由名称3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>×勝敗因実績</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Field29__c</columns>
        <columns>Field4__c</columns>
        <columns>Field33__c</columns>
        <columns>Field14__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Field15__c</columns>
        <columns>Field18__c</columns>
        <columns>Field19__c</columns>
        <columns>X1__c</columns>
        <columns>X2__c</columns>
        <columns>X3__c</columns>
        <columns>Field25__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Ayam_20060401</fullName>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Field6__c</columns>
        <columns>Field29__c</columns>
        <columns>Field4__c</columns>
        <columns>Field33__c</columns>
        <columns>Field14__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Field15__c</columns>
        <columns>Field18__c</columns>
        <columns>Field19__c</columns>
        <columns>X1__c</columns>
        <columns>X2__c</columns>
        <columns>X3__c</columns>
        <columns>Field25__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field19__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2006</value>
        </filters>
        <filters>
            <field>X1__c</field>
            <operation>contains</operation>
            <value>リース</value>
        </filters>
        <label>_[A.yam] 勝敗因登録日 &gt;=20060401</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>商談名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>